# worse-pose-but-better-3DGS

./: .gitignore  CMakeLists.txt  README.md  build_3rdparty.sh  environment.yml  image_solve.py  index.html  package.xml
cofig/: TUM1.yaml  TUM2.yaml  TUM3.yaml  euroc.yaml  kitti.yaml  tank.yaml
gaussian-splatting-pose/: train-w-pose.py  train.py
gaussian-splatting-pose/gaussian_renderer/: __init__ copy.py  __init__.py
gaussian-splatting-pose/scene/: cameras.py
gaussian-splatting-pose/submodules/diff-gaussian-rasterization/: rasterize_points.cu  rasterize_points.h
gaussian-splatting-pose/submodules/diff-gaussian-rasterization/cuda_rasterizer/: backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu
gaussian-splatting-pose/submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
gaussian-splatting-pose/utils/: camera_utils.py
html/: test.html
include/: KeyFrame.h  LocalMapping.h  LoopClosing.h  ROSMassageCreate.h  System.h  Tracking.h
launch/: slam_and_visualization.launch
orb-output/20241129_012158/: KeyFrameTrajectory.txt
orb-output/20241221_173657/sparse/0/: KeyFrameTrajectory.txt  cameras.txt  images.txt  points3D.txt
scripts/: camera_pose_visualizer.cc  kitti2rgbrosbag.py  mp4_rosbag.py  random_select.py  ros_mono.cc  ros_mono_direct_send.cc  show_points3d.py  swap_RB.py  test.py
scripts/FileProcessing/: Twc_to_Tcw.py  create_evaluation_file.py  delete_png.py  direct_create_evaluation_file.py  extract_keyframes.py  find_nearest_images.py  groundtruth_extract.py  random_select_gt.py  random_select_points.py  rosbag_img.py
scripts/point_cloud/: average_points.py  points3d_save.py  random50.py  remove_outliers.py  rename-points3d.py
src/: LocalMapping.cc  LoopClosing.cc  ROSMassageCreate.cc  System.cc  Tracking.cc
